--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -15,10 +15,11 @@
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}
             {% for error in form.password.errors %}
-            <span style="color: red">[{{ error }}]</span>
+                <span style="color: red">[{{ error }}]</span>
             {% endfor %}
         </p>
         <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
+        <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
     </form>
 {% endblock %}
