--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -8,8 +8,13 @@
                 <h1>User: {{ user.username }}</h1>
                 {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
                 {% if user.last_seen %}<p>Last seen on: {{ user.last_seen }}</p>{% endif %}
+                <p>{{ user.followers.count() }} подписчиков, {{ user.followed.count() }} подписок</p>
                 {% if user == current_user %}
                     <p><a href="{{ url_for('edit_profile') }}">Редактировать профиль</a></p>
+                {% elif not current_user.is_following(user) %}
+                    <p><a href="{{ url_for('follow', username=user.username) }}">Подписаться</a></p>
+                {% else %}
+                    <p><a href="{{ url_for('unfollow', username=user.username) }}">Отписаться</a></p>
                 {% endif %}
             </td>
         </tr>
